actualizacion de documentacion con la barra de menu incluida.

--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,7 @@ menu.append(new gui.MenuItem({
         else
             url = url_home;
         
-            ventana_manual = gui.Window.open(url, {toolbar: false});
+            ventana_manual = gui.Window.open(url, {toolbar: true});
     },
     label: 'Mostrar',
 }));
