--- a/src/app.html
+++ b/src/app.html
@@ -1,75 +1,73 @@
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
-    <title>Index</title>
-    
-<script type="text/javascript" charset="utf-8">    
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	
-var gui = require('nw.gui');
-var ventana = gui.Window.get();
-var url_home = "app://./documentacion/index.html";
-var url_online = "http://huayra.conectarigualdad.gob.ar";
-var ventana_manual = undefined;
-var modo_online = false;
-
-ventana.on("close", function() {
-	gui.App.quit();
-});
+	<title>Index</title>
+ 
+	<script type="text/javascript" charset="utf-8">    
+	var gui = require('nw.gui');
+	var ventana = gui.Window.get();
+	var url_home = "app://./documentacion/index.html";
+	var url_online = "http://huayra.conectarigualdad.gob.ar";
+	var ventana_manual = undefined;
+	var modo_online = false;
 	
-var tray = new gui.Tray({title: '', icon: 'imagenes/tray.png' });
-
-var menu = new gui.Menu();
-
-menu.click = function() {
-  // TODO: alert("asdasdasd");
-}
-
-function mostrar_ventana(url) {
-	
-	if (ventana_manual === undefined) {
-		ventana_manual = gui.Window.get(window.open(url, {toolbar: true}));
-		ventana_manual.on("close", function() {
-			this.close(true);
-			ventana_manual = undefined;
-		});
-	} else {
-		ventana_manual.window.location = url;
-		ventana_manual.restore();
-	}
-}
-
-
-menu.append(new gui.MenuItem({
-	label: 'Mostrar',
-	click: function() {
-		mostrar_ventana(url_home);
-  }
-}));
-
-menu.append(new gui.MenuItem({
-  label: 'Mostrar (modo online)',
-  click: function() {
-		mostrar_ventana(url_online);
-  }
-}));
-	
-	
-menu.append(new gui.MenuItem({
-  label: 'Salir',
-  click: function() {
+	ventana.on("close", function() {
 		gui.App.quit();
-  }
-}));
+	});
+		
+	var tray = new gui.Tray({title: '', icon: 'imagenes/tray.png' });
 	
-
-tray.menu = menu;
-   
+	var menu = new gui.Menu();
+	
+	menu.click = function() {
+		// TODO: alert("asdasdasd");
+	}
+	
+	function mostrar_ventana(url) {
+		
+		if (ventana_manual === undefined) {
+			ventana_manual = gui.Window.open(url, {toolbar: true});
+			ventana_manual.on("close", function() {
+				this.close(true);
+				ventana_manual = undefined;
+			});
+		} else {
+			ventana_manual.window.location = url;
+			ventana_manual.restore();
+		}
+	}
+	
+	
+	menu.append(new gui.MenuItem({
+		label: 'Mostrar',
+		click: function() {
+			mostrar_ventana(url_home);
+		}
+	}));
+	
+	menu.append(new gui.MenuItem({
+		label: 'Mostrar (modo online)',
+		click: function() {
+			mostrar_ventana(url_online);
+		}
+	}));
+		
+		
+	menu.append(new gui.MenuItem({
+		label: 'Salir',
+		click: function() {
+			gui.App.quit();
+		}
+	}));
+	
+	tray.menu = menu;
+		 
 	</script>
 </head>
     
 <body>
     app.html
 </body>
-</html>
 
+</html>
