Arreglo menor en la barra de navegación.

--- a/src/buscar.html
+++ b/src/buscar.html
@@ -14,8 +14,8 @@
 <script type="text/javascript" src="app://./js/bootstrap.js"></script>
 
 <div id='navegador'> 
-  <a class='btn btn-success btn-xs' onclick='history.back()'>« Atras</a> 
-  <a class='btn btn-success btn-xs' onclick='history.forward()'>Avanzar »</a> 
+  <a class='btn btn-success btn-xs' onclick='history.back()'>« Atrás</a> 
+  <a class='btn btn-success btn-xs' onclick='history.forward()'>Adelante »</a> 
   <a class='btn btn-info btn-xs derecha' href='app://./documentacion/buscar.html'>Buscar</a> 
 </div> 
 <div class="contenido" id="content">
