Agregando magnific-popup y jquery para mostrar imagenes.

--- a/src/buscar.html
+++ b/src/buscar.html
@@ -3,14 +3,14 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Buscar</title>
-		</head>
-	
+	</head>
+
 	<body>
 
 <link rel="stylesheet" type="text/css" href="app://./css/bootstrap.css"/>
-<link rel="stylesheet" type="text/css" href="app://./estilo.css"/>
-<script type="text/javascript" src="app://./barra.js"></script>
-
+<link rel="stylesheet" type="text/css" href="app://./css/estilo.css"/>
+    
+<script type="text/javascript" src="app://./js/barra.js"></script>
 <script type="text/javascript" src="app://./js/bootstrap.js"></script>
 
 <div id='navegador'> 
