--- a/src/buscar.html
+++ b/src/buscar.html
@@ -15,6 +15,7 @@
 
 <div id='navegador'> 
   <a class='btn btn-success btn-xs' onclick='history.back()'>« Atrás</a> 
+  <a class='btn btn-success btn-xs' href='app://./documentacion/index.html'>Inicio</a>
   <a class='btn btn-success btn-xs' onclick='history.forward()'>Adelante »</a> 
   <a class='btn btn-info btn-xs derecha' href='app://./documentacion/buscar.html'>Buscar</a> 
 </div> 
