--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 	<title>Index</title>
  
 	<script type="text/javascript" charset="utf-8">    
-  var TOOLBAR = false;
+  var TOOLBAR = true;
 	var gui = require('nw.gui');
 	var ventana = gui.Window.get();
 	var url_home = "app://./documentacion/index.html";
