--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <link href="app://./documentacion/skins/offline/main.css" rel="stylesheet" type="text/css"/>
@@ -16,9 +16,9 @@
             <a class='btn btn-success btn-xs' onclick='history.back()'>« Atrás</a>
             <a class='btn btn-success btn-xs' href='app://./documentacion/index.html'>Inicio</a>
             <a class='btn btn-success btn-xs' onclick='history.forward()'>Adelante »</a>
+            <a class='btn btn-success btn-xs' id="zoom_out">－</a>
+            <a class='btn btn-success btn-xs' id="zoom_in">＋</a>
             <a class='btn btn-info btn-xs derecha' href='app://./documentacion/buscar.html'>Buscar</a>
-            <input id="zoom" type="range" min="0" max="3.5" step="0.1" value="0" />
         </div>
     </body>
 </html>
-
