Los links se abren en un navegador externo, cierra #16

--- a/template.html
+++ b/template.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="app://./js/jquery.magnific-popup.js"></script>
         <script type="text/javascript" src="app://./js/bootstrap.js"></script>
         <script type="text/javascript" src="app://./js/zoom.js"></script>
+        <script type="text/javascript" src="app://./js/external-links.js"></script>
         <script type="text/javascript" src="app://./js/imagenes.js"></script>
     </head>
     <body>
