--- a/template.html
+++ b/template.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="app://./js/bootstrap.js"></script>
         <script type="text/javascript" src="app://./js/zoom.js"></script>
         <script type="text/javascript" src="app://./js/external-links.js"></script>
+        <script type="text/javascript" src="app://./js/broken-links.js"></script>
         <script type="text/javascript" src="app://./js/imagenes.js"></script>
     </head>
     <body>
